--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,36 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
+    background-color: #fff;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 /* Container */
 .container {
     width: 80%;
     margin: 0 auto;
+}
+
+/* Top Navigation */
+.top-nav {
+    background: #f4f4f4;
+    padding: 0.5em 0;
+    text-align: right;
+}
+
+.top-nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.top-nav ul li {
+    margin-left: 1em;
+}
+
+.top-nav ul li a {
+    color: #333;
+    text-decoration: none;
 }
 
 /* Header */
@@ -253,4 +277,37 @@ footer ul.social li {
 footer ul.social li a img {
     width: 30px;
     height: 30px;
+}
+
+/* Dark Mode Styles */
+body.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+body.dark-mode header,
+body.dark-mode footer {
+    background-color: #222;
+}
+
+body.dark-mode nav ul li a,
+body.dark-mode .top-nav ul li a,
+body.dark-mode .banner,
+body.dark-mode .btn {
+    color: #fff;
+}
+
+body.dark-mode .btn {
+    background-color: #444;
+}
+
+body.dark-mode .car {
+    background-color: #444;
+    border-color: #555;
+}
+
+body.dark-mode .newsletter,
+body.dark-mode .about,
+body.dark-mode .contact {
+    background-color: #444;
 }
